add recent post in home sreen and startet top menu control for Library page

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-legacy": "^5.0.0",
     "@vitejs/plugin-react": "^4.0.1",
+    "@vue/compiler-sfc": "^3.4.18",
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
